# HelixDB-MCP-Server

./: .gitignore  Cargo.toml  README.md  claude_desktop_config.example.json  config.hx.json  helix.toml  mcpconfig.example.toml  mcpconfig.toml
db/: CONSOLIDATION_SUMMARY.txt  queries.hx  schema.hx
src/: config.rs  embedding_client.rs  embedding_utils.rs  helix_client.rs  main.rs  remainder to fix.md  session.rs  tools.rs
src/server/: http_server.rs  mod.rs  tcp_server.rs
